[package]
name = "pumpfun-sniper"
version = "0.1.0"
edition = "2024"

[dependencies]
borsh = "1.5.7"
chrono = "0.4.42"
futures = "0.3.31"
lazy_static = "1.5.0"
once_cell = "1.21.3"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
solana-client = "2.2.1"
solana-relayer-adapter-rust = "3.2.3"
solana-sdk = "2.2.1"
solana-sdk-ids = "2.2.1"
spl-associated-token-account = "7.0.0"
spl-token = "8.0.0"
tokio = "1.47.1"
toml = "0.9.7"
yellowstone-grpc-client = "8.0.0"
yellowstone-grpc-proto = "8.0.0"

[[bin]]
name = "sniper_mode"
path = "src/entry_point/sniper_mode.rs"

[[bin]]
name = "half_copy_mode"
path = "src/entry_point/half_copy_mode.rs"
