[package]
name = "pumpfun-sniper"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["json"] }
borsh = "1.5.7"
chrono = "0.4.42"
colored = "3.0.0"
console = "0.16.1"
dashmap = "6.1.0"
file_update_monitor = "0.1.2"
futures = "0.3.31"
itertools = "0.14.0"
lazy_static = "1.5.0"
magic-crypt = "4.0.1"
once_cell = "1.21.3"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "http2",
    "stream",
    "blocking"
] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
solana-client = "2.2.1"
solana-sdk = "2.2.1"
solana-sdk-ids = "2.2.1"
spl-associated-token-account = "7.0.0"
spl-token = "8.0.0"
tokio = "1.47.1"
toml = "0.9.7"
yellowstone-grpc-client = "8.0.0"
yellowstone-grpc-proto = "8.0.0"
notify = "6.1"
bincode = "1.3"
base64 = "0.13"
solana-account-decoder-client-types = "2.3.6"
csv = "1.4.0"
rand = "0.10.0"
alloy = { version = "1.8", features = ["provider-http", "signer-local", "network", "rpc-types"] }
hex = "0.4"
bs58 = "0.5"

[[bin]]
name = "pumpfun-sniper"
path = "src/entry_point/CLI.rs"

[[bin]]
name = "sniper-mode"
path = "src/entry_point/sniper_mode.rs"

[[bin]]
name = "nonce-manager"
path = "src/entry_point/nonce_manager.rs"

[[bin]]
name = "all-sell"
path = "src/entry_point/all_sell.rs"

[[bin]]
name = "simulation"
path = "src/entry_point/simulation.rs"

[[bin]]
name = "rotate-wallet"
path = "src/entry_point/rotate_wallet.rs"
